# gtest-practice

./: CMakeLists.txt  fact.h  fact_test.cc
